# wakaamaNode

./: .gitignore  .travis.yml  404.html  LICENSE  README.md  extra.py  index.html  library.json  library.properties  mkdocs.yml  pio_extra_script.py  platformio.ini  sitemap.xml  update_mbedtls.sh  update_wakaama.cmake  update_wakaama.sh
.github/: ISSUE_TEMPLATE.md
advanced-usage/custom-network/: index.html
advanced-usage/custom-platform/: index.html
advanced-usage/deep-sleep/: index.html
advanced-usage/memory/: index.html
advanced-usage/ota/: index.html
advanced-usage/own-mainloop/: index.html
advanced-usage/thread-safety/: index.html
api/about/: index.html
api/connection-api/: index.html
api/objects-custom/: index.html
api/objects-custom-c-example/: index.html
api/objects-custom-cpp-example/: index.html
api/objects-registry/: index.html
b/: CMakeCache.txt  CTestTestfile.cmake  Makefile  TestsWithLwIP  TestsWithPosix  cmake_install.cmake
b/Testing/Temporary/: CTestCostData.txt
b/backward/: CTestTestfile.cmake  Makefile  cmake_install.cmake
contrib/: README.md
docs/: README.md  examples.md  index.md  legal_notice.md  privacy_policy.md  testing.md
docs/advanced-usage/: custom-network.md  custom-platform.md  deep-sleep.md  memory.md  ota.md  own-mainloop.md  thread-safety.md
docs/api/: about.md  connection-api.md  objects-custom-c-example.md  objects-custom-cpp-example.md  objects-custom.md  objects-registry.md
docs/others/: limitations-and-known-issues.md  troubleshooting.md
docs/quickstart/: getting-started.md
examples/: index.html
examples/arduino_example/: arduino_example.ino  build.sh
examples/esp8266_with_led_object/: platformio.ini  readme.md
examples/linux_win_custom_object_c/: CMakeLists.txt  platformio.ini  readme.md
examples/linux_win_custom_object_c/src/: custom_object.c  custom_object.h  debug_utils.h  main.c  wakaama_config.h
examples/linux_win_screen_control/: CMakeLists.txt  platformio.ini  readme.md
examples/linux_win_screen_control/src/: main.cpp  wakaama_config.h
examples/linux_win_with_screen_control/: CMakeLists.txt  lightclient.c  main.c  readme.md  screen_object.c  screen_object.h  test_object.c  test_object.h
examples/linux_win_with_screen_control/src/: debug_utils.h  main.c  screen_object.c  screen_object.h
examples/nodemcu_with_led/: platformio.ini  readme.md
examples/nodemcu_with_led_object/: build.sh  led_object.c  led_object.h  main.cpp  readme.md
generate_cpp_objects_from_registry/: readme.md
legal_notice/: index.html
others/limitations-and-known-issues/: index.html
others/troubleshooting/: index.html
privacy_policy/: index.html
quickstart/getting-started/: index.html
search/: search_index.json
src/: c_connect.c  c_objects.c  client_debug.c  client_debug.h  connect.cpp  events.cpp  inplace_function.h  internal.h  internal_objects.h  lwm2m_connect.c  lwm2m_connect.h  lwm2m_objects.c  lwm2m_objects.h  lwm2m_objects.hpp  lwm2m_objects_cpp.cpp  lwm2m_server.c  macro_helper.h  object_device.c  object_device.h  object_firmware.hpp  object_security.c  object_server.c  objects.cpp  src.cmake  wakaama_client_debug.c  wakaama_client_internal.h  wakaama_device_data.h  wakaama_firmware.h  wakaama_network.h  wakaama_object_utils.c  wakaama_object_utils.h  wakaama_simple_client.c  wakaama_simple_client.cmake  wakaama_simple_client.h
src/firmware/: arduinoOTA.cpp  esp8266sdk.c  firmware_posix.cpp  posix.cpp  readme.md
src/lwm2mObjects/: 1.h  10.h  10241.h  10242.h  10243.h  10244.h  10245.h  10246.h  10247.h  10248.h  10249.h  10250.h  10251.h  10252.h  10253.h  10254.h  10255.h  10256.h  10257.h  10258.h  10259.h  10260.h  10262.h  10263.h  10264.h  10265.h  10266.h  10267.h  10268.h  10269.h  10270.h  10271.h  10272.h  10273.h  10274.h  10275.h  10276.h  10277.h  10278.h  10279.h  (+121 more)
src/network/: lwip_network.c  network_common.c  network_common.h  network_lwip.c  network_lwip.h  network_posix.c  network_posix.h  network_ssl.c  network_utils.c  network_utils.h  posix_network.c  readme.md  server_ssl.c
src/platform/: .platform_freertos.c.kate-swp  esp8266sdk.c  freertos.c  platform_esp8266sdk.c  platform_freertos.c  platform_posix.c  posix.c
src/wakaama/: block1.c  block1.h  bootstrap.h  communication.h  config.h  context.h  data.c  data.h  debug.h  discover.c  discover.h  errorcodes.h  internals.h  json.c  json.h  liblwm2m.c  liblwm2m.h  list.c  list.h  lwm2m_client.h  lwm2m_server.h  management.c  objects.c  objects.h  observe.c  observe.h  packet.c  packet.h  platform.h  registration.c  registration.h  server_clientlist.h  server_object.h  tlv.c  tlv.h  transaction.c  transaction.h  uri.c  uri.h  utils.c  (+2 more)
test/: CMakeLists.txt  add_remove_server_tests.cpp  arduino.sh  block1.cpp  cmake.sh  connect_server_tests.cpp  convert_numbers.cpp  device_info_object_tests.cpp  network_helper.h  object_utils.cpp  object_utils_tests.cpp  platformio.sh  setup_gtest.sh  setup_test_network.sh  teardown_test_network.sh  test_object.c  testall.sh  testall_lwip.sh  testall_posix.sh  tlv_json_data.cpp  tlv_parse_decode.cpp  uri.cpp  wakaama_server_debug.c
test/ArduinoBuildTest/: ArduinoBuildTest.ino  time.h
test/aux/: test_object.c  test_object.h  wakaama_config.h  wakaama_server_debug.c
test/cmake/: Findlibunwind.cmake
test/dbg/: network_helper.h  test_object.c  test_object.h  wakaama_config.h  wakaama_server_debug.c  wakaama_server_debug.h
test/helper/: memory.cpp  memory.h  network_helper.h  server.cpp  server.h  test_debug.c  test_debug.h  test_object_c.c  test_object_c.h  test_object_cpp.h  wakaama_config.h  wakaama_server_debug.c  wakaama_server_debug.h
test/with_lwip/: CMakeLists.txt  lwip_network_helper.c  lwip_tap_helper.c  lwip_tap_helper.h  lwipopts.h  sys_arch.c
test/with_lwip/arch/: cc.h
test/with_lwip/include/: lwipopts.h
test/with_lwip/include/arch/: cc.h
test/with_lwip/include/lwip/: timers.h
test/with_lwip/netif/: sio.c  tapif.c  tunif.c  unixif.c
test/with_posix_sockets/: CMakeLists.txt  posix_network_helper.c
testing/: index.html
(+374 files in other folders)
